# Aris-

./: .gitignore  BUILD.md  LAWFUL_COMPLETION_OF_A_SYSTEM.md  LICENSE  LOGBOOK.md  README.md  SCARS.md  ZeroNUll83.code-workspace  build_aris_demo_desktop.ps1  build_aris_demo_variants.ps1  build_aris_runtime_desktop.ps1  code.code-workspace  forge.env.example  prepare_aris_demo_desktop_runtime.ps1  prepare_aris_runtime_desktop_runtime.ps1  pyproject.toml  run_aris.ps1  run_aris_demo.ps1  run_aris_demo_desktop.ps1  run_aris_runtime.ps1  run_aris_runtime_desktop.ps1
.forge_chat/: sessions.json
.forge_chat/aris/: activity.jsonl  integrity-manifest.json  memory.json
.forge_chat/aris_demo/: integrity-manifest.json
.forge_chat/knowledge/: Aris-Handbook  Laws-All-A.I-are-expected-to-follow  welcome.md
.forge_chat/memory_bank/: foundational.json
.github/workflows/: aris-demo-desktop-build.yml  aris-runtime-desktop-build.yml
.runtime/aris_demo_desktop_demo/: runtime-events.jsonl  workspace_registry.json
.runtime/aris_demo_desktop_v1/: runtime-events.jsonl  workspace_registry.json
.runtime/aris_demo_desktop_v2/: runtime-events.jsonl  workspace_registry.json
.runtime/debug-aris/: integrity-manifest.json
.runtime/debug-aris2/: activity.jsonl  integrity-manifest.json
.runtime/logbook-probe-a/: LOGBOOK.md  activity.jsonl  integrity-manifest.json
.runtime/logbook-probe-b/: LOGBOOK.md  activity.jsonl  integrity-manifest.json
.runtime/logbook-probe-c/: activity.jsonl  integrity-manifest.json
.runtime/logbook-probe-d/: LOGBOOK.md  activity.jsonl  integrity-manifest.json
.runtime/ul_desktop_runtime/: ul_desktop_runtime_manifest.json
archive/demo/: README.md
docs/voss_binding/: AAIS-SP-Delta-001_Stabilization-Protocol.md  AAIS-VB-Lambda-001_Voss-Binding.md  CHANGELOG.md  COVER.md  README.md
evolving_ai/: README.md  __init__.py  advanced_code_agents.py  archive.py  cli.py  code_agents.py  config.py  engine.py  genome.py  network.py  tasks.py
evolving_ai/app/: __init__.py  agent.py  agent_runs.py  cache.py  (+19 more)
forge/: README.md  schemas.py  service.py
forge_eval/: README.md
release/: README.md
src/: __init__.py  adapter_protocol.py  api.py  bootstrap_law.py  cisiv.py  constants_runtime.py  conversation_memory.py  doc_channel.py  forge_client.py  forge_eval_client.py  foundation_store.py  host_attestation.py  identity_registry.py  identity_verifier.py  jarvis_operator.py  law_context_builder.py  law_decorators.py  law_ledger.py  law_spine.py  mutation_broker.py  mutation_gate.py  runtime_law.py  ul_runtime.py  verification_engine.py
tests/: README.md  test_ai_app.py  test_archive.py  test_aris_bridge_intelligence.py  test_aris_cognitive_upgrade.py  test_aris_demo.py  test_aris_demo_desktop.py  test_aris_demo_desktop_runtime.py  test_aris_demo_shipping_lane.py  test_aris_demo_workspace_logic.py  test_aris_demo_workspace_registry.py  test_aris_governance.py  test_aris_launcher.py  test_aris_log_ingestion.py  test_aris_memory_bank.py  test_aris_runtime.py  test_aris_runtime_desktop.py  test_aris_runtime_desktop_runtime.py  test_aris_runtime_shipping_lane.py  test_aris_runtime_workspace_logic.py  test_aris_runtime_workspace_registry.py  test_code_agents.py  test_config.py  test_demo_startup_softening.py  test_doc_channel.py  test_engine.py  test_forge_eval_doc_channel.py  test_law_hardening.py  test_law_spine.py  test_memory_lock.py  test_model_switchboard.py  test_mutation_gate.py  test_runtime_startup_softening.py  test_voss_binding_bundle.py
(+269 files in other folders)
